# X4C-Moscatel

./: .gitignore  QUICKSTART.md  README.md
Dashboard/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Dashboard/src/: App.tsx  index.css  types.ts
Dashboard/src/components/: FilterBar.tsx  GeoMap.tsx
Dashboard/src/hooks/: useGeoData.ts
KiCad/: GPS.kicad_sch  IMU.kicad_sch  USB_C.kicad_sch  X4CMoscatel-B_Cu.gbr  X4CMoscatel-B_Mask.gbr  X4CMoscatel-B_Paste.gbr  X4CMoscatel-B_Silkscreen.gbr  X4CMoscatel-Edge_Cuts.gbr  X4CMoscatel-F_Cu.gbr  X4CMoscatel-F_Mask.gbr  X4CMoscatel-F_Paste.gbr  X4CMoscatel-F_Silkscreen.gbr  X4CMoscatel-NPTH-drl_map.gbr  X4CMoscatel-NPTH.drl  X4CMoscatel-PTH-drl_map.gbr  X4CMoscatel-PTH.drl  X4CMoscatel-job.gbrjob  X4CMoscatel-top-pos.csv  X4CMoscatel.csv  X4CMoscatel.kicad_pcb  X4CMoscatel.kicad_prl  X4CMoscatel.kicad_pro  X4CMoscatel.kicad_sch  microSD.kicad_sch  piezoeléctrico.kicad_sch
X4CMoscatel/KiCad/: GPS.kicad_sch  IMU.kicad_sch  LiPo.kicad_sch  USB_C.kicad_sch  X4CMoscatel.kicad_pcb  X4CMoscatel.kicad_prl  X4CMoscatel.kicad_pro  X4CMoscatel.kicad_sch  microSD.kicad_sch  piezoeléctrico.kicad_sch
codeina/train_digital_twin/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
codeina/train_digital_twin/main/: CMakeLists.txt  data_types.h  idf_component.yml  main.cpp  main_dep.cpp  network_task.cpp  network_task.h  sd_task.cpp  sd_task.h  sensor_task.cpp  sensor_task.h  telemetry_task.cpp  telemetry_task.h
codeina/wifi_test/: CMakeLists.txt  main.c  sdkconfig.defaults
(+33 files in other folders)
